--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
 
     - name: Run the script
       run: |
-        plot_digits_classification.py  # Replace with the name of your Python script
+        python plot_digits_classification.py  # Replace with the name of your Python script
