--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt  # Add this line if you have a requirements.txt file
+        pip install pytest  # Add this line to install pytest
 
     - name: Run tests
       run: |
